assets/style.scss
:root {
    font-size: 10px;

    --paragraph-spacing: 2em;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: black;

    font-family: Okta, sans-serif;
    font-size: 1.6rem;
    font-weight: 400;
    color: white;
    letter-spacing: .03em;
    line-height: 1.6em;
}

pre,
code {
    font-family: Cascadia Code, monospace;
    letter-spacing: .01em;
    font-size: 1.4rem;
}

pre {
    width: 100%;
    margin: 0 4em;
}

a {
    text-decoration: inherit;

    &:active,
    &:visited {
        color: inherit;
    }
}

p:not(:last-child) {
    margin-bottom: var(--paragraph-spacing);
}

.spacer {
    margin: 0 auto;
    max-width: 700px;
}

